--- a/src/pages/ProductCart/CartTable/CartRow/index.css
+++ b/src/pages/ProductCart/CartTable/CartRow/index.css
@@ -35,9 +35,10 @@
   font: normal var(--font-weight-extrabold) var(--font-size-30) / normal 'Open Sans';
   color: var(--color-overlay);
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   height: 150px;
+  margin-left: 130px;
 }
 
 .product-price span {
